update version of the website

--- a/src/components/Features.css
+++ b/src/components/Features.css
@@ -11,8 +11,18 @@
 .features-title {
   text-align: center;
   font-size: 2.5rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   color: #2c3e50;
+}
+
+.features-intro {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #7f8c8d;
+  margin-bottom: 3rem;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .features-grid {
