--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -17,6 +17,17 @@
   align-items: center;
 }
 
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo-image {
+  height: 40px;
+  width: auto;
+  cursor: pointer;
+}
+
 .logo h1 {
   margin: 0;
   font-size: 1.5rem;
